--- a/M2_Core_Java/HomeTask_Collections/.classpath
+++ b/M2_Core_Java/HomeTask_Collections/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="HomeTask_Collections_6.4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
