Java Basics, Collections, Strams, lambda, design pattern done

--- a/M2_Core_Java/HomeTask_Singleton_Design_Pattern/.project
+++ b/M2_Core_Java/HomeTask_Singleton_Design_Pattern/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>HomeTask_Streams</name>
+	<name>HomeTask_Singleton_Design_Pattern</name>
 	<comment></comment>
 	<projects>
 	</projects>
