--- a/M2_Core_Java/HomeTask_Loggers/src/main/resources/log4j2.properties
+++ b/M2_Core_Java/HomeTask_Loggers/src/main/resources/log4j2.properties
@@ -11,10 +11,10 @@ appender.file.layout.type=PatternLayout
 appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 loggers=file
 logger.file.name=com.epam.HomeTask.log4j
-logger.file.level = Error
+logger.file.level = trace
 logger.file.appenderRefs = file
 logger.file.appenderRef.file.ref = LOGFILE
 logging.file=C:\Users\Manojkumar_Uriti\Desktop\rd_manoj_hometasks\M2_Core_Java\HomeTask_Loggers\logs\propertieslogs.log
-rootLogger.level = Error
+rootLogger.level = trace
 rootLogger.appenderRefs = STDOUT
 rootLogger.appenderRef.stdout.ref = STDOUT
