--- a/PmtFinal/pom.xml
+++ b/PmtFinal/pom.xml
@@ -67,6 +67,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>5.3.14</version>
+		</dependency>
+
 
 	</dependencies>
 
